-
Bug
-
Resolution: Done
-
P2: Important
-
5.1.0 RC1
-
None
-
Windows 7, Mingw-32 bit offline installer (5.1 RC2)
-
35f79a2c1105f1b030b42fb60ab8857e291519d9
How to reproduce:
- Start Component Gallery example. Play With 'Banana' ComboBox.
- Keep application running in the background for a while
0 ?? 1 QWindowsWindow::~QWindowsWindow qwindowswindow.cpp 848 0x62844900 2 QWindowsWindow::~QWindowsWindow qwindowswindow.cpp 852 0x62844969 3 QWindow::destroy qwindow.cpp 1489 0x1d817a5 4 QWindow::close qwindow.cpp 1750 0x1d81bf1 5 QQuickMenuPopupWindow::dismissMenu qquickmenupopupwindow.cpp 169 0x66786847 6 QQuickMenuPopupWindow::forwardEventToTransientParent qquickmenupopupwindow.cpp 222 0x66786d28 7 QQuickMenuPopupWindow::mousePressEvent qquickmenupopupwindow.cpp 198 0x66786b36 8 QWindow::event qwindow.cpp 1838 0x1d81cd6 9 QQuickWindow::event qquickwindow.cpp 1211 0x139a9a1a 10 QApplicationPrivate::notify_helper qapplication.cpp 3455 0x18d4daff 11 QApplication::notify qapplication.cpp 2876 0x18d4b5c2 12 QCoreApplication::notifyInternal qcoreapplication.cpp 871 0x6b90a8e4 13 QCoreApplication::sendSpontaneousEvent qcoreapplication.h 235 0x2009305 14 QGuiApplicationPrivate::processMouseEvent qguiapplication.cpp 1439 0x1d7a447 15 QGuiApplicationPrivate::processWindowSystemEvent qguiapplication.cpp 1262 0x1d79c2d 16 QWindowSystemInterface::sendWindowSystemEventsImplementation qwindowsysteminterface.cpp 581 0x1d70760 17 QWindowSystemInterface::sendWindowSystemEvents qwindowsysteminterface.cpp 561 0x1d706ed 18 QWindowsGuiEventDispatcher::sendPostedEvents qwindowsguieventdispatcher.cpp 86 0x6285ca79 19 qt_internal_proc qeventdispatcher_win.cpp 429 0x6b95030c 20 USER32!OffsetRect C:\Windows\syswow64\user32.dll 0x75e762fa ... <More>
- replaces
-
QTBUG-32271 Dangerous design in QWindowsWindow::~QWindowsWindow
-
- Closed
-
-
QTBUG-32230 Crash when closing a combo box
-
- Closed
-