Fix crash caused by ~QWindowsWindow flushing the event queue.

Remove call to QWindowSystemInterface::flushWindowSystemEvents()
introduced by 153d613353863987322db81f3c31e33541ef7226 .

Task-number: QTBUG-32125

Change-Id: I14aa2772848e04b47deff6218b48eaf69f0bb649
Reviewed-by: Kai Koehne <kai.koehne@digia.com>
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@digia.com>
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>

cregit: 35f79a2c1105f1b030b42fb60ab8857e291519d9 https://github.com/qt/qtbase/commit/35f79a2c1105f1b030b42fb60ab8857e291519d9